2002-10-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for bonobo-activation.

2002-10-09  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Removed dia for GNOME 1.4 and fixed the
	GNOME 2.0 branch.

2002-10-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-media.

2002-10-01  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added missing tags for system-tray-applet.

2002-09-29  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added system-tray-applet.

2002-09-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gconf.

2002-09-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed profterm to gnome-terminal.

2002-09-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for libwnck.

2002-09-10  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Removed Ximian Setup Tool, it's now called
	gnome system tools and only for GNOME 2.0

2002-09-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-desktop.

2002-09-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gdm2.

2002-09-01  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Added totem.

2002-08-31  Carlos Perello Marin <carlos@gnome-db.org>

	* translation-status.xml: Added mergeant, updated the nautilus, eel,
	libgnome and libgnomeui branchs.
	Removed GNOME 1.4's gnome-db and libgda because it will not be relased
	anymore.
	Removed GNOME 2.0's gnome-db and gASQL because they are merged as
	mergeant.

2002-08-25  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libmrproject.

2002-08-23  Yanko Kaneti  <yaneti@declera.com>

	* translation-status.xml: gedit and libgnomecanvas branch changes.

2002-08-20  Christian Rose  <menthos@menthos.com>
