@@ -1088,6 +1088,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-mag">
+    <version release="gnome-2.0-extras">
+      <component name="gnome-mag" dir="gnome-mag">
+	<podir dir="po"/>
+	<potname name="gnome-mag.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-media">
     <version release="gnome-1.4-core">
       <component name="gnome-media" dir="gnome-media">
