@@ -1,3 +1,7 @@
+2002-10-21  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-mag.
+
 2002-10-19  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed branch for bonobo-activation.
